Atualização no site

--- a/metas.html
+++ b/metas.html
@@ -27,7 +27,7 @@
         </div>
 
         <div id="chavePix" style="display:none;">
-            <p><strong>Chave Pix:</strong> 123.456.789-00</p>
+            <p><strong>Chave Pix:</strong> 31991024029</p>
         </div>
 
         <div id="historico">
