Atualização no site

--- a/metas.html
+++ b/metas.html
@@ -23,7 +23,7 @@
         <div id="inputDeposit">
             <label for="deposito">Quanto você vai depositar hoje?</label>
             <input type="number" id="deposito" placeholder="Digite o valor">
-            <button id="metaConcluida">Meta Concluída</button>
+            <button id="metaConcluida">ir para deposito</button>
         </div>
 
         <div id="chavePix" style="display:none;">
